force-app/main/default/objects/Poin_Penilaian__c/Poin_Penilaian__c.object-meta.xml
<CustomObject>
    <description>menjelaskan mengenai score achivment &amp; penambahan poin agent</description>
    <label>Master Poin Penilaian</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Poin Penilaian</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>