force-app/main/default/objects/Poin_Penilaian__c/fields/Kriteria__c.field-meta.xml
<CustomField>
    <fullName>Kriteria__c</fullName>
    <label>Kriteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Istimewa</fullName>
            </value>
            <value>
                <fullName>Excelent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>