force-app/main/default/objects/Poin_Penilaian__c/fields/Score_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Score_Maximum__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Score Maximum</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>