force-app/main/default/objects/Poin_Penilaian__c/fields/Score_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Score_Minimum__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Score Minimum</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>